--- a/EasyWire/Components/_Imports.razor
+++ b/EasyWire/Components/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using EasyWire
 @using EasyWire.Components
+@using EasyWire.Components.Dialogs
+@using EasyWire.Models
+@using EasyWire.Services
+@using MudBlazor
