--- a/EasyWire/Components/_Imports.razor
+++ b/EasyWire/Components/_Imports.razor
@@ -12,3 +12,7 @@
 @using EasyWire.Models
 @using EasyWire.Services
 @using MudBlazor
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@using System.Security.Cryptography
+@using System.Text
+@using MudBlazor.ThemeManager
