--- a/EasyWire/Components/Layout/MainLayout.razor
+++ b/EasyWire/Components/Layout/MainLayout.razor
@@ -1,27 +1,67 @@
 ﻿@inherits LayoutComponentBase
+@inject ProtectedLocalStorage LocalStorage
 
-<MudThemeProvider/>
-<MudPopoverProvider/>
+<MudThemeProvider Theme="@(myTheme)" IsDarkMode="isDarkMode" />
 <MudDialogProvider/>
 <MudSnackbarProvider/>
+<MudPopoverProvider />
 
 <MudLayout>
-    <MudAppBar Elevation="0">
-        <MudText Typo="Typo.h6" Class="ml-3">EasyWire</MudText>
-        <MudSpacer />
+    <MudAppBar>
+        <MudSpacer/>
+        <MudText Typo="Typo.h4">EasyWire</MudText>
+        <MudSpacer/>
+        <MudToggleIconButton
+            Icon="@Icons.Material.Filled.LightMode"
+            ToggledIcon="@Icons.Material.Filled.DarkMode"
+            Toggled="@isDarkMode"
+            ToggledChanged="ToggleDarkMode"
+            Color="Color.Inherit"
+            Edge="Edge.End"/>
     </MudAppBar>
     <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.Large" Class="my-16 pt-16">
-            @Body
-        </MudContainer>
+        @Body
     </MudMainContent>
 </MudLayout>
 
 @code {
-    bool _drawerOpen = true;
-
-    void DrawerToggle()
+    private MudTheme? currentTheme;
+    private bool isDarkMode = false;
+    
+    // Load dark mode settings from local storage and set them
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        _drawerOpen = !_drawerOpen;
+        if (firstRender)
+        {
+            var storedDarkMode = await LocalStorage.GetAsync<bool>("DarkMode");
+            isDarkMode = storedDarkMode.Value;
+            StateHasChanged();
+        }
     }
+    
+    private async Task ToggleDarkMode()
+    {
+        isDarkMode = !isDarkMode;
+        await LocalStorage.SetAsync("DarkMode", isDarkMode);
+    }
+    
+    
+    private MudTheme myTheme = new()
+    {
+        PaletteLight = new PaletteLight()
+        {
+            Primary = "#e53935",
+            Secondary = "#616161"
+        },
+        PaletteDark = new PaletteDark()
+        {
+            Primary = "#e53935",
+            Secondary = "#616161"
+        },
+        LayoutProperties = new LayoutProperties()
+        {
+            DefaultBorderRadius = "6px"
+        }
+    };
+    
 }
